# RK3588

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RK3588_Project_Plan.md  analysis.md.resolved  camera_rga_first_frame.ppm  readme.md
apps/: perception_main.cpp  rtsp_pipeline_main.cpp  stream_gateway_main.cpp
cmake/apps/: perception_app.cmake  stream_gateway_app.cmake
cmake/demos/: camera_demos.cmake  fusion_demos.cmake  lidar_demos.cmake  video_demos.cmake
cmake/modules/: camera.cmake  core.cmake  fusion.cmake  infer.cmake  lidar.cmake  pipeline.cmake  video_base.cmake  video_encode.cmake  video_overlay.cmake  video_publish_hub.cmake  video_publish_rtsp.cmake  video_publish_webrtc.cmake  video_rga.cmake
cmake/targets/: base.cmake  lidar.cmake  mpp_rga_rknn.cmake
cmake/tools/: calib_tools.cmake  diagnostics_tools.cmake  motor_tools.cmake
demos/camera/: camera_rga_demo.cpp  camera_rga_rknn_demo.cpp  camera_thread_demo.cpp
demos/encode/: rga_demo.cpp
demos/fusion/: pipeline_thread_demo.cpp
demos/lidar/: rplidar_demo.cpp
demos/video/: mpp_encoder_demo.cpp  rtsp_publish_demo.cpp  webrtc_publish_demo.cpp
docs/: ARCHITECTURE_INTERFACE_GUIDE.md  MULTI_SENSOR_FUSION_ANALYSIS.md  PHASEC_SCENARIOS.md  PROJECT_STRUCTURE.md  control_plane_openapi_v1.yaml  jd_skill_roadmap.md  technical_manual.md
include/camera/: camera_capture.hpp
include/core/: bounded_queue.hpp  data_types.hpp  lidar_ring_buffer.hpp  mpp_common_utils.hpp
include/fusion/: detection_distance_fusion.hpp  multi_target_tracker.hpp  sensor_fusion.hpp
include/infer/: rknn_runner.hpp
include/lidar/: lidar_adapter.hpp  lidar_reader.hpp  lidar_types.hpp
include/modules/: camera_capture.hpp  frame_overlay.hpp  mpp_encoder.hpp  nv12_overlay.hpp  rga_processor.hpp  rknn_runner.hpp  sensor_fusion.hpp  zlm_rtsp_publisher.hpp
include/pipeline/: app_config.hpp  calibration_profile.hpp  perception_pipeline.hpp  pipeline_factory.hpp  pseudo_label_sink.hpp  runtime_telemetry.hpp  streaming_pipeline.hpp
include/rk3588/camera/: camera_capture.hpp
include/rk3588/core/: bounded_queue.hpp  data_types.hpp  lidar_ring_buffer.hpp  mpp_common_utils.hpp
include/rk3588/fusion/: sensor_fusion.hpp
include/rk3588/infer/: rknn_runner.hpp
include/rk3588/lidar/: lidar_adapter.hpp  lidar_reader.hpp  lidar_types.hpp
include/rk3588/pipeline/: app_config.hpp  perception_pipeline.hpp  pipeline_factory.hpp  pseudo_label_sink.hpp  streaming_pipeline.hpp
include/rk3588/video/: frame_overlay.hpp  mpp_encoder.hpp  nv12_overlay.hpp  rga_processor.hpp  zlm_rtsp_publisher.hpp
include/video/: encoded_packet.hpp  frame_overlay.hpp  mpp_encoder.hpp  nv12_overlay.hpp  publisher_hub.hpp  rga_processor.hpp  stream_publisher.hpp  video_runtime_config.hpp  webrtc_publisher.hpp  zlm_rtsp_publisher.hpp
perf_runs_quick/run_20260323_003058/: overall_summary.csv
perf_runs_quick/run_20260323_003058/round_1/: runtime.csv  summary.txt
perf_runs_quick2/run_20260323_095136/: overall_summary.csv
perf_runs_quick2/run_20260323_095136/round_1/: runtime.csv  summary.txt
reports/perf/: latest
reports/perf/run_20260323_100813/: overall_summary.csv
reports/perf/run_20260323_100813/round_1/: runtime.csv  summary.txt
scripts/: build_phasec_showcase.sh  camera_device_utils.sh  camera_preview.sh  lidar_capture_once.sh  lidar_release.sh  perf_stress_suite.sh  run_phasec_suite.sh  run_pseudo_label_capture.sh  run_resume_overall_test.sh  run_resume_three_scenarios.sh  run_rtsp.sh  run_webrtc.sh
src/: camera_rga_demo.cpp  camera_rga_rknn_demo.cpp  camera_rga_rknn_rtsp_demo.cpp  camera_thread_demo.cpp  camera_v4l2_demo.cpp  mpp_encoder_demo.cpp  pipeline_thread_demo.cpp  rga_demo.cpp  rplidar_angle_calib.cpp  rplidar_demo.cpp  rplidar_fov_filter_demo.cpp  rplidar_guard_demo.cpp  rplidar_motor_ctl.cpp  rplidar_timed_demo.cpp
src/camera/: camera_capture.cpp
src/infer/: rknn_runner.cpp
src/lidar/: lidar_adapter.cpp  lidar_reader.cpp
src/modules/: camera_capture.cpp  frame_overlay.cpp  mpp_encoder.cpp  nv12_overlay.cpp  rga_processor.cpp  rknn_runner.cpp  zlm_rtsp_publisher.cpp
src/pipeline/: perception_pipeline.cpp  pipeline_factory.cpp  pseudo_label_sink.cpp  runtime_telemetry.cpp  streaming_pipeline.cpp
src/video/: frame_overlay.cpp  mpp_encoder.cpp  nv12_overlay.cpp  publisher_hub.cpp  rga_processor.cpp  webrtc_publisher.cpp  zlm_rtsp_publisher.cpp
tools/calib/: rplidar_angle_calib.cpp
tools/diagnostics/: analyze_phasec_metrics.py  analyze_tracking_metrics.py  check_phasec_gate.py  evaluate_fusion_baseline.py  validate_pseudo_labels.py
tools/mediamtx/: wget-log
tools/webrtc_debug_ui/: index.html  server.cpp  server.py
